# emerald-lang-runtime

./: .gitignore  README.md
ast/: Cargo.toml  Emerald.asdl  README.md  asdl.py  asdl_rs.py  gen-ast.sh
ast/src/: ast_gen.rs  constant.rs  impls.rs  lib.rs  location.rs  unparse.rs
ast/vm/: gen.rs
codegen/: Cargo.toml  rust-toolchain
codegen/src/: main.rs
design/: modules.md
parser/: Cargo.toml  build.rs  emerald.lalrpop  emerald.rs  example.em  example.py  python.rs
parser/src/: context.rs  do_block.rs  emerald.rs  error.rs  fstring.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
parser/src/snapshots/: emerald_lang_parser__context__tests__ann_assign_name.snap  emerald_lang_parser__context__tests__assign_attribute.snap  emerald_lang_parser__context__tests__assign_for.snap  emerald_lang_parser__context__tests__assign_list.snap  emerald_lang_parser__context__tests__assign_list_comp.snap  emerald_lang_parser__context__tests__assign_name.snap  emerald_lang_parser__context__tests__assign_named_expr.snap  emerald_lang_parser__context__tests__assign_set_comp.snap  emerald_lang_parser__context__tests__assign_starred.snap  emerald_lang_parser__context__tests__assign_subscript.snap  emerald_lang_parser__context__tests__assign_tuple.snap  emerald_lang_parser__context__tests__assign_with.snap  emerald_lang_parser__context__tests__aug_assign_attribute.snap  emerald_lang_parser__context__tests__aug_assign_name.snap  emerald_lang_parser__context__tests__aug_assign_subscript.snap  emerald_lang_parser__context__tests__del_attribute.snap  (+40 more)
