[package]
name = "emerald-lang-ast"
version = "0.0.1"
authors = ["RustPython Team & Tinco Andringa"]
edition = "2021"

[features]
default = ["constant-optimization", "fold"]
constant-optimization = ["fold"]
fold = []

[dependencies]
num-bigint = "0.4.3"
serde = { version = "1.0.136", features = ["derive"] }
